--- a/ui/package.json
+++ b/ui/package.json
@@ -2,12 +2,17 @@
 	"name": "ui",
 	"version": "1.0.0",
 	"description": "Costellar UI components.",
-	"main": "index.js",
+	"main": "dist/cjs/index.js",
+	"module": "dist/esm/index.js",
+	"types": "dist/index.d.ts",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"storybook": "storybook dev -p 6006",
 		"build-storybook": "storybook build"
 	},
+	"files": [
+		"dist"
+	],
 	"keywords": [
 		"frontend"
 	],
@@ -15,6 +20,9 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@chromatic-com/storybook": "^1.5.0",
+		"@rollup/plugin-commonjs": "^25.0.8",
+		"@rollup/plugin-node-resolve": "^15.2.3",
+		"@rollup/plugin-typescript": "^11.1.6",
 		"@storybook/addon-essentials": "^8.1.5",
 		"@storybook/addon-interactions": "^8.1.5",
 		"@storybook/addon-links": "^8.1.5",
@@ -26,6 +34,8 @@
 		"next": "^14.2.3",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"rollup": "^4.18.0",
+		"rollup-plugin-dts": "^6.1.1",
 		"storybook": "^8.1.5",
 		"typescript": "^5.4.5"
 	},
