--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -1,11 +1,14 @@
 {
 	"compilerOptions": {
-		"target": "es2016",
+		"target": "esnext",
 		"module": "commonjs",
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
 		"strict": true,
 		"skipLibCheck": true,
-		"jsx": "react"
+		"jsx": "preserve",
+		"sourceMap": true,
+		"declaration": true,
+		"emitDeclarationOnly": false
 	}
 }
