--- a/ui/package.json
+++ b/ui/package.json
@@ -37,7 +37,8 @@
 		"rollup": "^4.18.0",
 		"rollup-plugin-dts": "^6.1.1",
 		"storybook": "^8.1.5",
-		"typescript": "^5.4.5"
+		"typescript": "^5.4.5",
+		"postcss": "^8.4.38"
 	},
 	"peerDependencies": {
 		"next": "^14.2.3",
